--- a/package.json
+++ b/package.json
@@ -4,8 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-loader": "^5.4.0",
+    "babel-plugin-react-transform": "^1.1.1",
+    "css-loader": "^0.23.0",
+    "html-webpack-plugin": "^1.6.2",
+    "react-transform-hmr": "^1.0.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.6",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-merge": "^0.3.0"
+  },
+  "dependencies": {
+    "array.prototype.findindex": "^1.0.0",
+    "node-uuid": "^1.4.7",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
+  }
 }
