--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-merge": "^0.3.0"
   },
   "dependencies": {
+    "alt": "^0.18.0",
     "array.prototype.findindex": "^1.0.0",
     "node-uuid": "^1.4.7",
     "react": "^0.14.2",
