--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "kanban_app",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.0",
+  "description": "Webpack demo app",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server"
   },
+  "keywords": [
+    "webpack",
+    "demo"
+  ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "babel-loader": "^5.4.0",
+    "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.1.1",
-    "css-loader": "^0.23.0",
-    "html-webpack-plugin": "^1.6.2",
+    "css-loader": "^0.15.5",
+    "html-webpack-plugin": "^1.6.0",
     "react-transform-hmr": "^1.0.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-merge": "^0.3.0"
+    "style-loader": "^0.12.3",
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.10.1",
+    "webpack-merge": "^0.1.2"
   },
   "dependencies": {
-    "alt": "^0.18.0",
+    "alt": "^0.17.4",
+    "alt-container": "^1.0.0",
     "array.prototype.findindex": "^1.0.0",
-    "node-uuid": "^1.4.7",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2"
+    "node-uuid": "^1.4.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
